packagelon com.twittelonr.cr_mixelonr.logging

import com.twittelonr.cr_mixelonr.modelonl.RelonlatelondTwelonelontCandidatelonGelonnelonratorQuelonry
import com.twittelonr.cr_mixelonr.modelonl.InitialCandidatelon
import com.twittelonr.cr_mixelonr.modelonl.ModulelonNamelons
import com.twittelonr.cr_mixelonr.logging.ScribelonLoggelonrUtils._
import com.twittelonr.cr_mixelonr.param.deloncidelonr.CrMixelonrDeloncidelonr
import com.twittelonr.cr_mixelonr.param.deloncidelonr.DeloncidelonrConstants
import com.twittelonr.cr_mixelonr.thriftscala.FelontchCandidatelonsRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.GelontRelonlatelondTwelonelontsScribelon
import com.twittelonr.cr_mixelonr.thriftscala.PelonrformancelonMelontrics
import com.twittelonr.cr_mixelonr.thriftscala.PrelonRankFiltelonrRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.RelonlatelondTwelonelontRelonquelonst
import com.twittelonr.cr_mixelonr.thriftscala.RelonlatelondTwelonelontRelonsponselon
import com.twittelonr.cr_mixelonr.thriftscala.RelonlatelondTwelonelontRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.RelonlatelondTwelonelontTopLelonvelonlApiRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.TwelonelontCandidatelonWithMelontadata
import com.twittelonr.cr_mixelonr.util.CandidatelonGelonnelonrationKelonyUtil
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.finaglelon.tracing.Tracelon
import com.twittelonr.logging.Loggelonr
import com.twittelonr.simclustelonrs_v2.common.UselonrId
import com.twittelonr.util.Futurelon
import com.twittelonr.util.Stopwatch
import javax.injelonct.Injelonct
import javax.injelonct.Namelond
import javax.injelonct.Singlelonton

@Singlelonton
caselon class RelonlatelondTwelonelontScribelonLoggelonr @Injelonct() (
  deloncidelonr: CrMixelonrDeloncidelonr,
  statsReloncelonivelonr: StatsReloncelonivelonr,
  @Namelond(ModulelonNamelons.RelonlatelondTwelonelontsLoggelonr) relonlatelondTwelonelontsScribelonLoggelonr: Loggelonr) {

  privatelon val scopelondStats = statsReloncelonivelonr.scopelon("RelonlatelondTwelonelontsScribelonLoggelonr")
  privatelon val topLelonvelonlApiStats = scopelondStats.scopelon("TopLelonvelonlApi")
  privatelon val topLelonvelonlApiNoUselonrIdStats = scopelondStats.scopelon("TopLelonvelonlApiNoUselonrId")
  privatelon val uppelonrFunnelonlsStats = scopelondStats.scopelon("UppelonrFunnelonls")
  privatelon val uppelonrFunnelonlsNoUselonrIdStats = scopelondStats.scopelon("UppelonrFunnelonlsNoUselonrId")

  delonf scribelonInitialCandidatelons(
    quelonry: RelonlatelondTwelonelontCandidatelonGelonnelonratorQuelonry,
    gelontRelonsultFn: => Futurelon[Selonq[Selonq[InitialCandidatelon]]]
  ): Futurelon[Selonq[Selonq[InitialCandidatelon]]] = {
    scribelonRelonsultsAndPelonrformancelonMelontrics(
      RelonlatelondTwelonelontScribelonMelontadata.from(quelonry),
      gelontRelonsultFn,
      convelonrtToRelonsultFn = convelonrtFelontchCandidatelonsRelonsult
    )
  }

  delonf scribelonPrelonRankFiltelonrCandidatelons(
    quelonry: RelonlatelondTwelonelontCandidatelonGelonnelonratorQuelonry,
    gelontRelonsultFn: => Futurelon[Selonq[Selonq[InitialCandidatelon]]]
  ): Futurelon[Selonq[Selonq[InitialCandidatelon]]] = {
    scribelonRelonsultsAndPelonrformancelonMelontrics(
      RelonlatelondTwelonelontScribelonMelontadata.from(quelonry),
      gelontRelonsultFn,
      convelonrtToRelonsultFn = convelonrtPrelonRankFiltelonrRelonsult
    )
  }

  /**
   * Scribelon Top Lelonvelonl API Relonquelonst / Relonsponselon and pelonrformancelon melontrics
   * for thelon gelontRelonlatelondTwelonelonts elonndpoint.
   */
  delonf scribelonGelontRelonlatelondTwelonelonts(
    relonquelonst: RelonlatelondTwelonelontRelonquelonst,
    startTimelon: Long,
    relonlatelondTwelonelontScribelonMelontadata: RelonlatelondTwelonelontScribelonMelontadata,
    gelontRelonsultFn: => Futurelon[RelonlatelondTwelonelontRelonsponselon]
  ): Futurelon[RelonlatelondTwelonelontRelonsponselon] = {
    val timelonr = Stopwatch.start()
    gelontRelonsultFn.onSuccelonss { relonsponselon =>
      relonlatelondTwelonelontScribelonMelontadata.clielonntContelonxt.uselonrId match {
        caselon Somelon(uselonrId) =>
          if (deloncidelonr.isAvailablelonForId(uselonrId, DeloncidelonrConstants.uppelonrFunnelonlPelonrStelonpScribelonRatelon)) {
            topLelonvelonlApiStats.countelonr(relonlatelondTwelonelontScribelonMelontadata.product.originalNamelon).incr()
            val latelonncyMs = timelonr().inMilliselonconds
            val relonsult = convelonrtTopLelonvelonlAPIRelonsult(relonquelonst, relonsponselon, startTimelon)
            val tracelonId = Tracelon.id.tracelonId.toLong
            val scribelonMsg =
              buildScribelonMelonssagelon(relonsult, relonlatelondTwelonelontScribelonMelontadata, latelonncyMs, tracelonId)

            scribelonRelonsult(scribelonMsg)
          }
        caselon _ =>
          topLelonvelonlApiNoUselonrIdStats.countelonr(relonlatelondTwelonelontScribelonMelontadata.product.originalNamelon).incr()
      }
    }
  }

  /**
   * Scribelon Pelonr-stelonp intelonrmelondiatelon relonsults and pelonrformancelon melontrics
   * for elonach stelonp: felontch candidatelons, filtelonrs.
   */
  privatelon delonf scribelonRelonsultsAndPelonrformancelonMelontrics[T](
    relonlatelondTwelonelontScribelonMelontadata: RelonlatelondTwelonelontScribelonMelontadata,
    gelontRelonsultFn: => Futurelon[T],
    convelonrtToRelonsultFn: (T, UselonrId) => RelonlatelondTwelonelontRelonsult
  ): Futurelon[T] = {
    val timelonr = Stopwatch.start()
    gelontRelonsultFn.onSuccelonss { input =>
      relonlatelondTwelonelontScribelonMelontadata.clielonntContelonxt.uselonrId match {
        caselon Somelon(uselonrId) =>
          if (deloncidelonr.isAvailablelonForId(uselonrId, DeloncidelonrConstants.uppelonrFunnelonlPelonrStelonpScribelonRatelon)) {
            uppelonrFunnelonlsStats.countelonr(relonlatelondTwelonelontScribelonMelontadata.product.originalNamelon).incr()
            val latelonncyMs = timelonr().inMilliselonconds
            val relonsult = convelonrtToRelonsultFn(input, uselonrId)
            val tracelonId = Tracelon.id.tracelonId.toLong
            val scribelonMsg =
              buildScribelonMelonssagelon(relonsult, relonlatelondTwelonelontScribelonMelontadata, latelonncyMs, tracelonId)
            scribelonRelonsult(scribelonMsg)
          }
        caselon _ =>
          uppelonrFunnelonlsNoUselonrIdStats.countelonr(relonlatelondTwelonelontScribelonMelontadata.product.originalNamelon).incr()
      }
    }
  }

  privatelon delonf convelonrtTopLelonvelonlAPIRelonsult(
    relonquelonst: RelonlatelondTwelonelontRelonquelonst,
    relonsponselon: RelonlatelondTwelonelontRelonsponselon,
    startTimelon: Long
  ): RelonlatelondTwelonelontRelonsult = {
    RelonlatelondTwelonelontRelonsult.RelonlatelondTwelonelontTopLelonvelonlApiRelonsult(
      RelonlatelondTwelonelontTopLelonvelonlApiRelonsult(
        timelonstamp = startTimelon,
        relonquelonst = relonquelonst,
        relonsponselon = relonsponselon
      ))
  }

  privatelon delonf convelonrtFelontchCandidatelonsRelonsult(
    candidatelonsSelonq: Selonq[Selonq[InitialCandidatelon]],
    relonquelonstUselonrId: UselonrId
  ): RelonlatelondTwelonelontRelonsult = {
    val twelonelontCandidatelonsWithMelontadata = candidatelonsSelonq.flatMap { candidatelons =>
      candidatelons.map { candidatelon =>
        TwelonelontCandidatelonWithMelontadata(
          twelonelontId = candidatelon.twelonelontId,
          candidatelonGelonnelonrationKelony = Nonelon
        ) // do not hydratelon candidatelonGelonnelonrationKelony to savelon cost
      }
    }
    RelonlatelondTwelonelontRelonsult.FelontchCandidatelonsRelonsult(
      FelontchCandidatelonsRelonsult(Somelon(twelonelontCandidatelonsWithMelontadata)))
  }

  privatelon delonf convelonrtPrelonRankFiltelonrRelonsult(
    candidatelonsSelonq: Selonq[Selonq[InitialCandidatelon]],
    relonquelonstUselonrId: UselonrId
  ): RelonlatelondTwelonelontRelonsult = {
    val twelonelontCandidatelonsWithMelontadata = candidatelonsSelonq.flatMap { candidatelons =>
      candidatelons.map { candidatelon =>
        val candidatelonGelonnelonrationKelony =
          CandidatelonGelonnelonrationKelonyUtil.toThrift(candidatelon.candidatelonGelonnelonrationInfo, relonquelonstUselonrId)
        TwelonelontCandidatelonWithMelontadata(
          twelonelontId = candidatelon.twelonelontId,
          candidatelonGelonnelonrationKelony = Somelon(candidatelonGelonnelonrationKelony),
          authorId = Somelon(candidatelon.twelonelontInfo.authorId),
          scorelon = Somelon(candidatelon.gelontSimilarityScorelon),
          numCandidatelonGelonnelonrationKelonys = Nonelon
        )
      }
    }
    RelonlatelondTwelonelontRelonsult.PrelonRankFiltelonrRelonsult(PrelonRankFiltelonrRelonsult(Somelon(twelonelontCandidatelonsWithMelontadata)))
  }

  privatelon delonf buildScribelonMelonssagelon(
    relonlatelondTwelonelontRelonsult: RelonlatelondTwelonelontRelonsult,
    relonlatelondTwelonelontScribelonMelontadata: RelonlatelondTwelonelontScribelonMelontadata,
    latelonncyMs: Long,
    tracelonId: Long
  ): GelontRelonlatelondTwelonelontsScribelon = {
    GelontRelonlatelondTwelonelontsScribelon(
      uuid = relonlatelondTwelonelontScribelonMelontadata.relonquelonstUUID,
      intelonrnalId = relonlatelondTwelonelontScribelonMelontadata.intelonrnalId,
      relonlatelondTwelonelontRelonsult = relonlatelondTwelonelontRelonsult,
      relonquelonstelonrId = relonlatelondTwelonelontScribelonMelontadata.clielonntContelonxt.uselonrId,
      guelonstId = relonlatelondTwelonelontScribelonMelontadata.clielonntContelonxt.guelonstId,
      tracelonId = Somelon(tracelonId),
      pelonrformancelonMelontrics = Somelon(PelonrformancelonMelontrics(Somelon(latelonncyMs))),
      imprelonsselondBuckelonts = gelontImprelonsselondBuckelonts(scopelondStats)
    )
  }

  privatelon delonf scribelonRelonsult(
    scribelonMsg: GelontRelonlatelondTwelonelontsScribelon
  ): Unit = {
    publish(loggelonr = relonlatelondTwelonelontsScribelonLoggelonr, codelonc = GelontRelonlatelondTwelonelontsScribelon, melonssagelon = scribelonMsg)
  }
}
